--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@
 repositories {
     mavenLocal()
     mavenCentral()
+    maven {
+        url "https://oss.sonatype.org/content/groups/staging"
+    }
 }
 
 defaultTasks 'audit'
