Change bootstrap delay to second

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ repositories {
     maven {
         url "https://oss.sonatype.org/content/groups/staging"
     }
+    maven { // FIXME : remove en release
+        url "https://oss.sonatype.org/content/repositories/comoctoreactive-1022"
+    }
 }
 
 defaultTasks 'audit'
