--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+apply plugin:'application'
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -25,6 +28,8 @@ repositories {
 }
 
 defaultTasks 'audit'
+
+mainClassName = "com.octo.reactive.sample.TestApp"
 
 ext.aspectjVersion = '1.8.2'
 ext.reactiveAuditVersion = '0.7'
