Now maven target folder is not visible on cloudbees (!?). Commenting out ant-run-plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
                         </executions>
                     </plugin>
 
-                    <plugin>
+<!--                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
                         <version>1.7</version>
@@ -192,7 +192,7 @@
                             </execution>
                         </executions>
                     </plugin>
-
+ -->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
