--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,8 @@
                             <workingDirectory>${project.build.directory}</workingDirectory>
                             <arguments>
                                 <argument>-DreactiveAudit=${project.build.testOutputDirectory}/reactiveAudit.properties</argument>
-                                <argument>-DreactiveAudit_logOutput=${reactive-audit-output-dir}/audit.log</argument>
+                                <!-- <argument>-DreactiveAudit_logOutput=${reactive-audit-output-dir}/audit.log</argument> -->
+                                <argument>-DreactiveAudit_logOutput=console</argument>
                                 
                                 <argument>-DreactiveAudit_debug=true</argument>
                                 
