--- a/src/test/resources/reactiveAudit.properties
+++ b/src/test/resources/reactiveAudit.properties
@@ -16,6 +16,7 @@
 
 reactiveAudit_throwExceptions=false
 reactiveAudit_threadPattern=(^.*$)
+reactiveAudit_bootstrapMode=annotation
 reactiveAudit_bootstrapDelay=0
 reactiveAudit_file=low
 reactiveAudit_network=low
