--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,16 @@
-<!--
-  ~ Copyright 2014 OCTO Technology
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+<!-- ~ Copyright 2014 OCTO Technology ~ ~ Licensed under the Apache License, Version 2.0 (the "License"); ~ you may not use this file except in compliance with the License. ~ You may obtain a copy of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless required by applicable law or agreed to in writing, software ~ distributed under the License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. ~ See the License for the specific language governing permissions and ~ limitations under the License. -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.octo.reactive.audit</groupId>
     <artifactId>reactive-audit-integration</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>Reactive Audit Tool Integration Test Application</name>
 
     <properties>
         <reactive.audit.agent.version.string>0.8</reactive.audit.agent.version.string>
         <aspectjweaver.version>1.8.2</aspectjweaver.version>
+        <junit.version>4.11</junit.version>
     </properties>
 
     <dependencies>
@@ -37,11 +24,32 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectjweaver.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.11</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>2.12</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <excludedGroups>com.octo.reactive.sample.IntegrationTest</excludedGroups>
+                    </configuration>
+                </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
@@ -212,7 +220,7 @@
                             <arguments>
                                 <argument>-DreactiveAudit=${project.build.testOutputDirectory}/reactiveAudit.properties</argument>
                                 <argument>-DreactiveAudit_logOutput=${reactive-audit-output-dir}/audit.log</argument>
-                                
+
                                 <argument>-javaagent:${aspectjweaver.artifact.path}</argument>
                                 <argument>-Djava.ext.dirs=${java-ext-dir}${path.separator}${reactive-audit-lib-home}</argument>
                                 <argument>-jar</argument>
@@ -220,6 +228,20 @@
                             </arguments>
                             <outputFile>${reactive-audit-output-dir}/reactiveAuditConsole.log</outputFile>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <executions>
+                            <execution>
+                                <id>perform-audit-integration-test</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
