--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,10 @@
     <properties>
         <reactive.audit.agent.version.string>0.8</reactive.audit.agent.version.string>
         <aspectjweaver.version>1.8.2</aspectjweaver.version>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <junit.version>4.11</junit.version>
+        <commons-io.version>2.4</commons-io.version>
+        <commons-codec.version>1.10</commons-codec.version>
     </properties>
 
     <dependencies>
@@ -29,6 +32,16 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
         </dependency>
     </dependencies>
 
@@ -233,6 +246,14 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.18.1</version>
+
+                        <configuration>
+                            <systemPropertyVariables>
+                                <buildDirPath>${project.build.testOutputDirectory}</buildDirPath>
+                                <auditFilePath>${reactive-audit-output-dir}/audit.log</auditFilePath>
+                                <consoleOutputFilePath>${reactive-audit-output-dir}/reactiveAuditConsole.log</consoleOutputFilePath>
+                            </systemPropertyVariables>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>perform-audit-integration-test</id>
